Resources/css/style.css
body {
  text-align: center;
  font-family: Helvetica;
}

h1 {
  font-size: 70px;
  font-weight: bold;
  color: white;
}

h2 {
  font-size: 32px;
  font-weight: bold;
}

h3 {
  font-size: 23px;
  font-weight: bold;
}

p {
  font-size: 14px;
}

.header {
  background-image: url(./Images/the-flatiron-building.png);
  color: white;
}

.middle {
  color: white;
  background-image: url(./Images/the-flatiron-building.png);
}

.footer {
  color: white;
  font-size: 11px;
  background-color: dimgray;
}

